--- a/package.json
+++ b/package.json
@@ -4,6 +4,20 @@
   "description": "Expo module for Amazon Interactive Video Service (IVS) player",
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VollaInc/expo-ivs-player"
+  },
+  "keywords": [
+    "expo",
+    "react-native",
+    "ivs",
+    "amazon-ivs",
+    "video",
+    "player",
+    "streaming",
+    "live-streaming"
+  ],
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
@@ -15,19 +29,12 @@
     "open:ios": "xed example/ios",
     "open:android": "open -a \"Android Studio\" example/android"
   },
-  "keywords": [
-    "react-native",
-    "expo",
-    "expo-ivs-player",
-    "ExpoIvsPlayer"
-  ],
-  "repository": "https://github.com/WoonHaKim/expo-ivs-player",
   "bugs": {
-    "url": "https://github.com/WoonHaKim/expo-ivs-player/issues"
+    "url": "https://github.com/VollaInc/expo-ivs-player/issues"
   },
-  "author": "WoonHaKim <work@woonakim.info> (https://github.com/WoonHaKim)",
+  "author": "VollaInc",
   "license": "MIT",
-  "homepage": "https://github.com/WoonHaKim/expo-ivs-player#readme",
+  "homepage": "https://github.com/VollaInc/expo-ivs-player#readme",
   "dependencies": {},
   "devDependencies": {
     "@types/react": "~19.0.0",
