--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "expo-ivs-player",
-  "version": "0.1.0",
+  "name": "@vollainc/expo-ivs-player",
+  "version": "0.1.1",
   "description": "Expo module for Amazon Interactive Video Service (IVS) player",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -24,7 +24,6 @@
     "lint": "expo-module lint",
     "test": "expo-module test",
     "prepare": "expo-module prepare",
-    "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module",
     "open:ios": "xed example/ios",
     "open:android": "open -a \"Android Studio\" example/android"
@@ -41,6 +40,9 @@
     "expo-module-scripts": "^4.1.10",
     "expo": "~53.0.0",
     "react-native": "0.79.1"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
     "expo": "*",
